--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Helvetica";
+    src: url("../../public/fonts/Helvetica.ttf") format("truetype");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
