--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,67 @@
-@font-face {
-    font-family: "Helvetica";
-    src: url("../../public/fonts/Helvetica.ttf") format("truetype");
-}
+@import url("https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+        scroll-behavior: smooth;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+        @apply font-geologica;
+    }
+
+    a {
+        @apply font-lato;
+    }
+
+    button {
+        @apply font-playfair tracking-widest;
+    }
+
+    body {
+        @apply bg-slate-50;
+    }
+}
+
+@layer components {
+    .slider-title {
+        @apply text-center text-3xl px-12  leading-normal tracking-widest uppercase font-bold md:text-5xl;
+    }
+
+    .slider-desc {
+        @apply text-center text-xs px-12 lg:text-base leading-normal tracking-[0.3em] uppercase font-thin md:text-lg;
+    }
+
+    .swiper-nav {
+        @apply absolute z-10 flex justify-center items-center w-6 aspect-square rounded bg-black text-white text-xxs top-1/2 -translate-y-1/2 leading-none hover:opacity-70 md:w-12 md:text-lg;
+    }
+}
+
+#hamburger-toggle {
+    @apply hidden;
+}
+
+#hamburger-toggle:checked ~ #hamburger #bar {
+    @apply bg-transparent rotate-180  after:translate-y-[-90%] after:rotate-[-45deg]  before:translate-y-[10%] before:rotate-[45deg];
+}
+
+#hamburger-toggle:checked ~ #screen {
+    @apply block;
+}
+
+.nav-list {
+    @apply opacity-0 w-full bg-stone-500 p-1 transition-all duration-300 ease-in-out hover:bg-stone-600;
+}
+
+#hamburger-toggle:checked ~ ul {
+    @apply visible flex translate-x-0;
+}
+#hamburger-toggle:checked ~ ul .nav-list {
+    @apply opacity-100;
+}
