--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,9 @@
     html {
         scroll-behavior: smooth;
     }
+    * {
+        @apply font-lato;
+    }
 
     h1,
     h2,
@@ -26,6 +29,12 @@
 
     body {
         @apply bg-slate-50;
+    }
+
+    input,
+    select,
+    textarea {
+        @apply outline-none;
     }
 }
 
@@ -46,10 +55,6 @@
         @apply w-full transition-all duration-300 ease-in-out;
     }
 
-    .error-input {
-        @apply text-red-500 text-xs;
-    }
-
     .table {
         @apply items-center w-full bg-transparent border-collapse;
     }
@@ -60,6 +65,66 @@
 
     .table-data {
         @apply border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs max-w-xs p-4;
+    }
+
+    .invalid-message {
+        @apply text-red-500 text-xs block;
+    }
+
+    .badge {
+        @apply flex justify-between items-center text-xs font-semibold py-1 px-2 rounded uppercase w-fit text-stone-100;
+    }
+
+    .badge-danger {
+        @apply bg-red-400;
+    }
+
+    .badge-success {
+        @apply bg-green-400;
+    }
+
+    .badge-warning {
+        @apply bg-yellow-400;
+    }
+
+    .badge-info {
+        @apply bg-blue-400;
+    }
+
+    .badge-primary {
+        @apply bg-teal-400;
+    }
+
+    .badge-secondary {
+        @apply bg-stone-400;
+    }
+
+    .clickable {
+        @apply cursor-pointer;
+    }
+
+    .clickable.badge-danger {
+        @apply hover:bg-red-500;
+    }
+
+    .clickable.badge-success {
+        @apply hover:bg-green-500;
+    }
+
+    .clickable.badge-warning {
+        @apply hover:bg-yellow-500;
+    }
+
+    .clickable.badge-info {
+        @apply hover:bg-blue-500;
+    }
+
+    .clickable.badge-primary {
+        @apply hover:bg-teal-500;
+    }
+
+    .clickable.badge-secondary {
+        @apply hover:bg-stone-500;
     }
 }
 
