--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -72,7 +72,7 @@
     }
 
     .badge {
-        @apply flex justify-between items-center text-xs font-semibold py-1 px-2 rounded uppercase w-fit text-stone-100;
+        @apply flex justify-between items-center text-xs font-semibold py-1 px-2 rounded uppercase w-fit text-stone-100 whitespace-nowrap;
     }
 
     .badge-danger {
